docs: content stuff

--- a/src/pages/data-visualization/color-palettes/index.mdx
+++ b/src/pages/data-visualization/color-palettes/index.mdx
@@ -27,21 +27,9 @@ requests, or contribute, please go to carbon-charts
 <AnchorLink>Sequential palettes</AnchorLink>
 <AnchorLink>Alert palette</AnchorLink>
 <AnchorLink>Gradient use</AnchorLink>
+<AnchorLink>Color in action</AnchorLink>
 
 </AnchorLinks>
-
-## Resources
-
-<Row className="resource-card-group">
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="Data visualization color palettes (IBM internal link)"
-      href="https://ibm.box.com/s/1rvfetsgovxoj4660suz5sa2tgqizlvy"
-      actionIcon="download">
-      <MdxIcon name="sketch" />
-    </ResourceCard>
-  </Column>
-</Row>
 
 ## Categorical palettes
 
@@ -122,7 +110,9 @@ For the full list of approved gradient options, see the IBM Design Language
 
 ## Color in action
 
-See the IBM Design color palette in action across multiple business units and applications. Deliberate hits of color are composed with rich neutrals for a well-balanced cohesive experience.
+See the IBM Design color palette in action across multiple business units and
+applications. Deliberate hits of color are composed with rich neutrals for a
+well-balanced cohesive experience.
 
 <ImageGallery>
 <ImageGalleryImage col={6} title="Bubble chart in action" alt="example of a bubble chart">
