feat(data-viz): add color palette component (#1407)
* feat: add sequential color palette initial

* feat: add color palette data separately

* feat: clean up code, add dark mode

* feat: add initial dark mode styles

* feat: update color palette md

* chore: clean up code

* chore: clean up color data

* fix: dark border styles

* feat: add alert colors

* fix: categorical light config

* fix: update sequential palettes

* fix: dropdown divider

* feat: add copy functionality

* fix: copy hover styles

* fix: remove copy btn

* fix: update switcher styles

* fix: update dropdown bug

* chore: remove unused useEffect

* chore: remove unnecessary styles

* fix: responsiveness

* fix: black color token, type, switcher text color

* fix: tablet/mobile margin

* feat: add chart in action gallery

* fix: margin

* fix: sequential palette column divider

* fix: borders

* fix: switcher func names and css modules

* fix: dependency regression

* docs: content stuff

Co-authored-by: Vince Picone <vpicone@gmail.com>
Co-authored-by: Alison Joseph <alisonejoseph@Gmail.com>

--- a/src/pages/data-visualization/color-palettes/index.mdx
+++ b/src/pages/data-visualization/color-palettes/index.mdx
@@ -27,21 +27,9 @@ requests, or contribute, please go to carbon-charts
 <AnchorLink>Sequential palettes</AnchorLink>
 <AnchorLink>Alert palette</AnchorLink>
 <AnchorLink>Gradient use</AnchorLink>
+<AnchorLink>Color in action</AnchorLink>
 
 </AnchorLinks>
-
-## Resources
-
-<Row className="resource-card-group">
-  <Column colLg={4} colMd={4} noGutterSm>
-    <ResourceCard
-      subTitle="Data visualization color palettes (IBM internal link)"
-      href="https://ibm.box.com/s/1rvfetsgovxoj4660suz5sa2tgqizlvy"
-      actionIcon="download">
-      <MdxIcon name="sketch" />
-    </ResourceCard>
-  </Column>
-</Row>
 
 ## Categorical palettes
 
@@ -52,170 +40,12 @@ The colors of this palette should be applied in sequence strictly as described
 below. The sequence is carefully curated to maximize contrast between
 neighboring colors to help with visual differentiation.
 
-<Row>
-<Column  colLg={8} colMd={6} colSm={4}>
-<ArtDirection>
-
-![1 category option 1](images/palettes-14catsm.png)
-![1 category option 1](images/palettes-14cat.png)
-![1 category option 1](images/palettes-14cat.png)
-
-</ArtDirection>
-<Caption>
-
-Complete default categorical palette in light and dark themes
-
-</Caption>
-
-</Column>
-</Row>
+<ColorPalette type="categorical" />
 
 You can override the categorical sequence with one of the following palettes if
 the exact number of data categories is predictable.
 
-### Light theme alternatives
-
-<Title>1-Color</Title>
-
-<Row>
-<Column  colLg={8} colMd={6} colSm={4}>
-<ArtDirection>
-
-![1 category option 1](images/alts-light-1sm.png)
-![1 category option 1](images/alts-light-1.png)
-![1 category option 1](images/alts-light-1.png)
-
-</ArtDirection>
-</Column>
-</Row>
-
-<Title>2-Color</Title>
-
-<Row>
-<Column  colLg={12} colMd={8} colSm={4}>
-<ArtDirection>
-
-![1 category option 1](images/alts-light-2sm.png)
-![1 category option 1](images/alts-light-2.png)
-![1 category option 1](images/alts-light-2.png)
-
-</ArtDirection>
-</Column>
-</Row>
-
-<Title>3-Color</Title>
-
-<Row>
-<Column  colLg={12} colMd={8} colSm={4}>
-<ArtDirection>
-
-![1 category option 1](images/alts-light-3sm.png)
-![1 category option 1](images/alts-light-3.png)
-![1 category option 1](images/alts-light-3.png)
-
-</ArtDirection>
-</Column>
-</Row>
-
-<Title>4-Color</Title>
-
-<Row>
-<Column  colLg={8} colMd={6} colSm={4}>
-<ArtDirection>
-
-![1 category option 1](images/alts-light-4sm.png)
-![1 category option 1](images/alts-light-4.png)
-![1 category option 1](images/alts-light-4.png)
-
-</ArtDirection>
-</Column>
-</Row>
-
-<Title>5-Color</Title>
-
-<Row>
-<Column  colLg={8} colMd={6} colSm={4}>
-<ArtDirection>
-
-![1 category option 1](images/alts-light-5sm.png)
-![1 category option 1](images/alts-light-5.png)
-![1 category option 1](images/alts-light-5.png)
-
-</ArtDirection>
-</Column>
-</Row>
-
-### Dark theme alternatives
-
-<Title>1-Color</Title>
-
-<Row>
-<Column  colLg={8} colMd={6} colSm={4}>
-<ArtDirection>
-
-![1 category option 1](images/alts-dark-1sm.png)
-![1 category option 1](images/alts-dark-1.png)
-![1 category option 1](images/alts-dark-1.png)
-
-</ArtDirection>
-</Column>
-</Row>
-
-<Title>2-Color</Title>
-
-<Row>
-<Column  colLg={12} colMd={8} colSm={4}>
-<ArtDirection>
-
-![1 category option 1](images/alts-dark-2sm.png)
-![1 category option 1](images/alts-dark-2.png)
-![1 category option 1](images/alts-dark-2.png)
-
-</ArtDirection>
-</Column>
-</Row>
-
-<Title>3-Color</Title>
-
-<Row>
-<Column  colLg={12} colMd={8} colSm={4}>
-<ArtDirection>
-
-![1 category option 1](images/alts-dark-3sm.png)
-![1 category option 1](images/alts-dark-3.png)
-![1 category option 1](images/alts-dark-3.png)
-
-</ArtDirection>
-</Column>
-</Row>
-
-<Title>4-Color</Title>
-
-<Row>
-<Column  colLg={8} colMd={6} colSm={4}>
-<ArtDirection>
-
-![1 category option 1](images/alts-dark-4sm.png)
-![1 category option 1](images/alts-dark-4.png)
-![1 category option 1](images/alts-dark-4.png)
-
-</ArtDirection>
-</Column>
-</Row>
-
-<Title>5-Color</Title>
-
-<Row>
-<Column  colLg={8} colMd={6} colSm={4}>
-<ArtDirection>
-
-![1 category option 1](images/alts-dark-5sm.png)
-![1 category option 1](images/alts-dark-5.png)
-![1 category option 1](images/alts-dark-5.png)
-
-</ArtDirection>
-</Column>
-</Row>
+<ColorPalette type="grouped" />
 
 ## Sequential palettes
 
@@ -225,33 +55,7 @@ The monochromatic palettes are good for relationship charts and trend charts. In
 light themes, the darkest color denotes the largest values. In dark themes, the
 lightest color denotes the largest values.
 
-<Title>Palette 1</Title>
-
-<Row>
-<Column  colLg={8} colMd={6} colSm={4}>
-<ArtDirection>
-
-![Monochromatic palette 1](images/palettes-mono-1sm.png)
-![Monochromatic palette 1](images/palettes-mono-1.png)
-![Monochromatic palette 1](images/palettes-mono-1.png)
-
-</ArtDirection>
-</Column>
-</Row>
-
-<Title>Palette 2</Title>
-
-<Row>
-<Column  colLg={8} colMd={6} colSm={4}>
-<ArtDirection>
-
-![Monochromatic palette 2](images/palettes-mono-2sm.png)
-![Monochromatic palette 2](images/palettes-mono-2.png)
-![Monochromatic palette 2](images/palettes-mono-2.png)
-
-</ArtDirection>
-</Column>
-</Row>
+<ColorPalette type="sequential" isMono />
 
 ### Diverging palettes
 
@@ -263,34 +67,12 @@ themes.
 The red-cyan palette has a natural association with temperature. Use this
 palette for data representing hot-vs-cold.
 
-<Row>
-<Column colLg={12} colMd={6} colSm={4}>
-<ArtDirection>
-
-![Diverging palette 1](images/palettes-div1sm.png)
-![Diverging palette 1](images/palettes-div1.png)
-![Diverging palette 1](images/palettes-div1.png)
-
-</ArtDirection>
-</Column>
-</Row>
-
 #### Palette 2
 
 The purple-teal palette is good for data with no temperature associations, such
 as performance, sales, and rates of change.
 
-<Row>
-<Column colLg={12} colMd={6} colSm={4}>
-<ArtDirection>
-
-![Diverging palette 2](images/palettes-div2sm.png)
-![Diverging palette 2](images/palettes-div2.png)
-![Diverging palette 2](images/palettes-div2.png)
-
-</ArtDirection>
-</Column>
-</Row>
+<ColorPalette type="sequential" isDiverging />
 
 ## Alert palette
 
@@ -298,17 +80,7 @@ Alert colors are used to reflect status. Typically, red represents danger or
 error; orange represents a serious warning; yellow represents a regular warning,
 and green represents normal or success.
 
-<Row>
-<Column colLg={8} colMd={6} colSm={4}>
-<ArtDirection>
-
-![Alert palette](images/palettes-alert-sm.png)
-![Alert palette](images/palettes-alert.png)
-![Alert palette](images/palettes-alert.png)
-
-</ArtDirection>
-</Column>
-</Row>
+<ColorPalette type="alert" />
 
 ## Gradient use
 
@@ -335,3 +107,53 @@ For the full list of approved gradient options, see the IBM Design Language
 
 </Column>
 </Row>
+
+## Color in action
+
+See the IBM Design color palette in action across multiple business units and
+applications. Deliberate hits of color are composed with rich neutrals for a
+well-balanced cohesive experience.
+
+<ImageGallery>
+<ImageGalleryImage col={6} title="Bubble chart in action" alt="example of a bubble chart">
+
+![example of a bubble chart](images/color_gallery_1.png)
+
+</ImageGalleryImage>
+
+<ImageGalleryImage col={6} title="Radar chart in action" alt="example of a radar chart">
+
+![example of a radar chart](images/color_gallery_2.png)
+
+</ImageGalleryImage>
+
+<ImageGalleryImage col={6} title="Donut chart in action" alt="exmaple of a donut chart">
+
+![exmaple of a donut chart](images/color_gallery_3.png)
+
+</ImageGalleryImage>
+
+<ImageGalleryImage col={6} title="Stream chart in action" alt="exmaple of a stream chart">
+
+![exmaple of a stream chart](images/color_gallery_4.png)
+
+</ImageGalleryImage>
+
+<ImageGalleryImage col={12} title="Heat map in action" alt="exmaple of a heat map">
+
+![exmaple of a heat map](images/color_gallery_5.png)
+
+</ImageGalleryImage>
+
+<ImageGalleryImage col={12} title="Proportional diagram in action" alt="exmaple of a proportional diagram">
+
+![exmaple of a proportional diagram](images/color_gallery_6.png)
+
+</ImageGalleryImage>
+
+<ImageGalleryImage col={12} title="Alluvial diagram in action" alt="exmaple of an alluvial diagram">
+
+![exmaple of an alluvial diagram](images/color_gallery_7.png)
+
+</ImageGalleryImage>
+</ImageGallery>
