docs: update meetups to IBMers only

--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: Meetups
 description:
-  The Carbon team is committed to making members of the community successful.
-  Find meetups for learning what’s new, tips and tricks, and leveling up your
-  skills.
+  The Carbon team is committed to making members of the IBM community
+  successful. Find meetups for learning what’s new, tips and tricks, and
+  leveling up your skills.
 ---
 
 import { Button } from 'carbon-components-react';
@@ -112,10 +112,10 @@ welcome.
   <span>Contact us to schedule</span>
 </h2>
 
-Put your screens up in MURAL and step through the flow and page designs with the
-Carbon designers. Great for assessing the overall flow, page layouts, the best
-choices and use of components, content—everything from the big picture to the
-smallest detail! Usually two or more hours.
+_For IBMers only:_ Put your screens up in MURAL and step through the flow and
+page designs with the Carbon designers. Great for assessing the overall flow,
+page layouts, the best choices and use of components, content—everything from
+the big picture to the smallest detail! Usually two or more hours.
 
 <Button
   kind="tertiary"
