--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -11,9 +11,9 @@ import { ArrowRight16 } from '@carbon/icons-react';
 
 <PageDescription>
 
-The Carbon team is committed to helping members of the community be successful.
-Find meetups for leveling up your skills, connecting with your peers, and
-getting reviews on work in progress.
+The Carbon team is committed to helping members of the IBM community be
+successful. Find meetups for leveling up your skills, connecting with your
+peers, and getting reviews on work in progress.
 
 </PageDescription>
 
