docs: domain guidance tweak for dotcom library

--- a/src/pages/community/domain-guidance.mdx
+++ b/src/pages/community/domain-guidance.mdx
@@ -76,8 +76,8 @@ _This content is accessible to IBMers only._
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Carbon for IBM.com"
-    href="https://www.ibm.com/standards/web/ibm-dotcom-library/"
+    subTitle="IBM Brand Systems"
+    href="https://www.ibm.com/brand/systems"
     >
 
 ![Bee icon](images/bee.svg)
@@ -85,10 +85,20 @@ _This content is accessible to IBMers only._
   </ResourceCard>
 
 </Column>
+</Row>
+
+## Digital experience guidance
+
+The guidance and resources here have been developed for IBM teams building
+digital experiences for the IBM.com site.
+
+_This content is accessible to IBMers only._
+
+<Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="IBM Brand Systems"
-    href="https://www.ibm.com/brand/systems"
+    subTitle="IBM.com Library"
+    href="https://www.ibm.com/standards/web/ibm-dotcom-library/"
     >
 
 ![Bee icon](images/bee.svg)
