docs: add data viz playback meetup (#1654)
* docs: add data viz playback meetup

* docs: data viz meetup contact update

* docs: data viz meetup image update

* docs: change contact method from slack to email

* docs: add IBMer tag to playback

* docs: update meetups to IBMers only

* copy tweak

--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -1,9 +1,9 @@
 ---
 title: Meetups
 description:
-  The Carbon team is committed to making members of the community successful.
-  Find meetups for learning what’s new, tips and tricks, and leveling up your
-  skills.
+  The Carbon team is committed to making members of the IBM community
+  successful. Find meetups for learning what’s new, tips and tricks, and
+  leveling up your skills.
 ---
 
 import { Button } from 'carbon-components-react';
@@ -11,9 +11,9 @@ import { ArrowRight16 } from '@carbon/icons-react';
 
 <PageDescription>
 
-The Carbon team is committed to helping members of the community be successful.
-Find meetups for leveling up your skills, connecting with your peers, and
-getting reviews on work in progress.
+The Carbon team is committed to helping members of the IBM community be
+successful. Find meetups for leveling up your skills, connecting with your
+peers, and getting reviews on work in progress.
 
 </PageDescription>
 
@@ -30,16 +30,43 @@ getting reviews on work in progress.
   <span>Fridays, 11am–12pm Central</span>
 </h2>
 
-You’ve got some work in progress and you’re ready to open it up and share it
-with a broader audience for honest (and caring!) feedback. Verify that you’re
-working with the grid correctly, that you’re using the right components, that
-you’re using the correct language. Sign up to share, or come along to see other
-work in progress and learn that way.
+_For IBMers only:_ You’ve got some work in progress and you’re ready to open it
+up and share it with a broader audience for honest (and caring!) feedback.
+Verify that you’re working with the grid correctly, that you’re using the right
+components, that you’re using the correct language. Sign up to share, or come
+along to see other work in progress and learn that way.
 
 <Button
   kind="tertiary"
   renderIcon={ArrowRight16}
   onClick={() => (window.location.href = 'mailto:carbon@us.ibm.com')}>
+  Email us
+</Button>
+
+</Column>
+</Row>
+<Row className="meetups-list">
+<Column colLg={4} colMd={2}>
+
+![](/images/meetups_data_viz.png)
+
+</Column>
+<Column colLg={7} colMd={5}>
+
+<h2>
+  Data visualization weekly playback
+  <span>Wednesdays, 11am–12pm Central</span>
+</h2>
+
+_For IBMers only:_ Are you designing a product with data visualization needs?
+These weekly playback calls are a chance for us to have dataviz stakeholders
+present, discuss design explorations, gather feedback and business unit
+requirements, and determine next steps on requested components or functionality.
+
+<Button
+  kind="tertiary"
+  renderIcon={ArrowRight16}
+  onClick={() => (window.location.href = 'mailto:iliadm@ca.ibm.com')}>
   Email us
 </Button>
 
@@ -85,10 +112,10 @@ welcome.
   <span>Contact us to schedule</span>
 </h2>
 
-Put your screens up in MURAL and step through the flow and page designs with the
-Carbon designers. Great for assessing the overall flow, page layouts, the best
-choices and use of components, content—everything from the big picture to the
-smallest detail! Usually two or more hours.
+_For IBMers only:_ Put your screens up in MURAL and step through the flow and
+page designs with the Carbon designers. Great for assessing the overall flow,
+page layouts, the best choices and use of components, content—everything from
+the big picture to the smallest detail! Usually two or more hours.
 
 <Button
   kind="tertiary"
