--- a/src/pages/community/domain-guidance.mdx
+++ b/src/pages/community/domain-guidance.mdx
@@ -12,6 +12,27 @@ currently accessible to IBMers only.
 
 </PageDescription>
 
+## Digital experience guidance
+
+The guidance and resources here have been developed for IBM teams building
+digital experiences for the IBM.com site.
+
+_This content is accessible to IBMers only._
+
+<Row className="resource-card-group">
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="IBM.com Library"
+    href="https://www.ibm.com/standards/web/ibm-dotcom-library/"
+    >
+
+![Bee icon](images/bee.svg)
+
+  </ResourceCard>
+
+</Column>
+</Row>
+
 ## Product-specific guidance
 
 The guidance and resources here are for IBM product teams building software
@@ -74,17 +95,6 @@ visual and verbal detail, so that the guidance may inform your work.
 _This content is accessible to IBMers only._
 
 <Row className="resource-card-group">
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Carbon for IBM.com"
-    href="https://www.ibm.com/standards/web/ibm-dotcom-library/"
-    >
-
-![Bee icon](images/bee.svg)
-
-  </ResourceCard>
-
-</Column>
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
     subTitle="IBM Brand Systems"
