--- a/src/pages/help/faq/index.mdx
+++ b/src/pages/help/faq/index.mdx
@@ -22,7 +22,7 @@ series of individual styles, components, and guidelines used for creating
 unified product experiences.
 
 To learn more about how we work check out
-[All about Carbon](/all-about-carbon/what-is-carbon).
+[What is Carbon](/all-about-carbon/what-is-carbon).
 
 ### Who works on Carbon?
 
