--- a/src/pages/help/faq/index.mdx
+++ b/src/pages/help/faq/index.mdx
@@ -36,7 +36,7 @@ and
 
 ## Contributing
 
-### How can I contribute and/or propose new components/ideas?
+### How can I contribute and/or propose new components or ideas?
 
 Check out our [contribution overview](/contributing/overview) to learn all about
 the different ways to contribute. Thanks for the help!
