--- a/src/pages/help/faq/index.mdx
+++ b/src/pages/help/faq/index.mdx
@@ -44,7 +44,7 @@ the different ways to contribute. Thanks for the help!
 ### I see a bug. How do I report it?
 
 First, make sure the problem is reproducible. Once confirmed, open an issue in
-the appropriate GitHub repo (see below). We will address the bug as soon as we
+the appropriate GitHub repo from the following list. We will address the bug as soon as we
 can. If you have a fix for the bug, please feel free to submit a PR for it.
 
 For larger changes, please see our
