--- a/src/pages/help/faq/index.mdx
+++ b/src/pages/help/faq/index.mdx
@@ -138,7 +138,7 @@ to explore the work so far.
 These charts will receive an updated color palette to match Carbon v10. Visual
 guidance and chart components are also in the works!
 
-### I haven't updated to the latest version of Carbon yet, and I still need the old documentation. Where can I find it?
+### Where can I find documentation for earlier versions of Carbon?
 
 Every version of Carbon that is still supported is hosted at its own domain. You
 can find the old sites version here:
