docs: content tweaks

--- a/src/pages/help/faq/index.mdx
+++ b/src/pages/help/faq/index.mdx
@@ -27,9 +27,8 @@ To learn more about how we work check out
 ### Who works on Carbon?
 
 Carbon has a core team of designers and front-end developers dedicated to
-developing and supporting the system. Our core team sits in the IBM Design
-Studio in Austin, Texas. There are also countless other designers and developers
-who contribute back to
+developing and supporting the system. There are also countless other designers
+and developers who contribute back to
 [carbon-components](https://github.com/carbon-design-system/carbon-components#contributors)
 and
 [carbon-react](https://github.com/carbon-design-system/carbon-components-react#contributors).
@@ -44,8 +43,9 @@ the different ways to contribute. Thanks for the help!
 ### I see a bug. How do I report it?
 
 First, make sure the problem is reproducible. Once confirmed, open an issue in
-the appropriate GitHub repo from the following list. We will address the bug as soon as we
-can. If you have a fix for the bug, please feel free to submit a PR for it.
+the appropriate GitHub repo from the following list. We will address the bug as
+soon as we can. If you have a fix for the bug, please feel free to submit a PR
+for it.
 
 For larger changes, please see our
 [contribution overview](/contributing/overview).
@@ -131,17 +131,12 @@ sites and is only accessible to IBMers.
 
 ### Where do I find charts and data visualization?
 
-Carbon charts are in development and classified as experimental. Check out the
-[experimental charts repo](https://carbon-design-system.github.io/carbon-charts/?experimental=true)
-to explore the work so far.
-
-These charts will receive an updated color palette to match Carbon v10. Visual
-guidance and chart components are also in the works!
+Carbon charts and their corresponding assets and documentation are now in the
+[Data visualization](/data-visualization/getting-started) section.
 
 ### Where can I find documentation for earlier versions of Carbon?
 
-Every version of Carbon that is still supported is hosted at its own domain. You
-can find the old sites version here:
+You can find earlier versions of Carbon documentation here:
 **[V6](http://v6.carbondesignsystem.com/)**,
 **[V7](http://v7.carbondesignsystem.com/)**,
 **[V8](http://v8.carbondesignsystem.com/)**, and
