--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -15,7 +15,8 @@ templates, color palettes, GitHub repos, and design tools.
 
 <AnchorLinks>
   <AnchorLink>Introduction</AnchorLink>
-  <AnchorLink>Color, grid, and icons</AnchorLink>
+  <AnchorLink>Elements</AnchorLink>
+  <AnchorLink>Extensions</AnchorLink>
   <AnchorLink>Fonts</AnchorLink>
   <AnchorLink>GitHub repos</AnchorLink>
 </AnchorLinks>
@@ -23,19 +24,16 @@ templates, color palettes, GitHub repos, and design tools.
 ## Introduction
 
 Carbon expresses the [IBM Design Language](https://www.ibm.com/design/language/)
-and delivers it through tools for designers and developers including guidance,
-tooling, components, and support. Take the time to read the design language site
-so that you fully understand what drives IBM's design philosophy and principles,
-and can make informed decisions in your product design work.
+in product and delivers it through tools for designers and developers including
+guidance, tooling, components, and support. Take the time to read the design
+language site so that you fully understand what drives IBM's design philosophy
+and principles, and can make informed decisions in your product design work.
 
 To use the Sketch libraries you'll find here, you need the **most recent
 version** of [Sketch](https://www.sketch.com/) installed. If you’re new to the
 design kit, visit the [Design kits](/designing/kits/sketch) page.
 
-For data visualization resources, go to the
-[Data visualization](/data-visualization/getting-started) section of the site.
-
-## Color, grid, and icons
+## Elements
 
 <Row className="resource-card-group">
 <Column colLg={4} colMd={4} noGutterSm>
@@ -86,14 +84,6 @@ For data visualization resources, go to the
 
 </ResourceCard>
 </Column>
-<Column colLg={4} colMd={4}  noGutterSm>
-  <ResourceCard
-    subTitle="UI Shell template"
-    href="https://www.sketch.com/s/6a8e1d7b-f00a-4d8d-9d83-79ecf4dc12a0"
-    actionIcon="launch">
-    <MdxIcon name="sketch" />
-  </ResourceCard>
-</Column>
 
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
@@ -105,6 +95,39 @@ For data visualization resources, go to the
 
   </ResourceCard>
 </Column>
+</Row>
+
+## Extensions
+
+<Row className="resource-card-group">
+
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Data visualization master Sketch file"
+    href="https://github.com/carbon-design-system/carbon-design-kit/tree/master/Carbon%20Design%20Kit%20-%2010.10.0/data-visualization"
+    actionIcon="download">
+    <MdxIcon name="sketch" />
+  </ResourceCard>
+</Column>
+
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Carbon mobile sketch kit"
+    href="https://www.sketch.com/s/a3343128-adb6-489c-9e62-709d89ba76e9"
+    actionIcon="download">
+    <MdxIcon name="sketch" />
+  </ResourceCard>
+</Column>
+
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="UI Shell template"
+    href="https://www.sketch.com/s/6a8e1d7b-f00a-4d8d-9d83-79ecf4dc12a0"
+    actionIcon="launch">
+    <MdxIcon name="sketch" />
+  </ResourceCard>
+</Column>
+
 </Row>
 
 ## Fonts
