add resource card for library link

--- a/src/pages/patterns/text-toolbar-pattern/index.mdx
+++ b/src/pages/patterns/text-toolbar-pattern/index.mdx
@@ -34,6 +34,15 @@ contributions.
 
 </AnchorLinks>
 
+## Resources
+
+<Row className="resource-card-group">
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Text toolbar pattern library"
+    href="sketch://add-library/cloud/f32b7e90-d97e-48ef-ae53-beabf75f5846"
+    >
+
 ## Overview
 
 A text toolbar is a set of buttons and menus that is grouped horizontally. These
