--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -103,7 +103,7 @@ design kit, visit the [Design kits](/designing/kits/sketch) page.
 
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Data visualization master Sketch file"
+    subTitle="Data visualization master sketch file"
     href="https://github.com/carbon-design-system/carbon-design-kit/tree/master/Carbon%20Design%20Kit%20-%2010.10.0/data-visualization"
     actionIcon="download">
     <MdxIcon name="sketch" />
@@ -123,6 +123,15 @@ design kit, visit the [Design kits](/designing/kits/sketch) page.
   <ResourceCard
     subTitle="UI Shell template"
     href="https://www.sketch.com/s/6a8e1d7b-f00a-4d8d-9d83-79ecf4dc12a0"
+    actionIcon="launch">
+    <MdxIcon name="sketch" />
+  </ResourceCard>
+</Column>
+
+<Column colLg={4} colMd={4} noGutterSm>
+  <ResourceCard
+    subTitle="Text tooblar pattern library"
+    href="sketch://add-library/cloud/f32b7e90-d97e-48ef-ae53-beabf75f5846"
     actionIcon="launch">
     <MdxIcon name="sketch" />
   </ResourceCard>
