--- a/src/pages/patterns/text-toolbar-pattern/index.mdx
+++ b/src/pages/patterns/text-toolbar-pattern/index.mdx
@@ -36,14 +36,9 @@ contributions.
 
 ## Resources
 
-<Row>
-<Row className="resource-card-group">
-<Column colLg={4} colMd={4} noGutterSm>
-  <ResourceCard
-    subTitle="Text toolbar pattern library"
-    href="sketch://add-library/cloud/f32b7e90-d97e-48ef-ae53-beabf75f5846"
-    >
-</Row>
+<ResourceCard
+  subTitle="Text toolbar pattern library"
+  href="sketch://add-library/cloud/f32b7e90-d97e-48ef-ae53-beabf75f5846"></ResourceCard>
 
 ## Overview
 
