--- a/src/pages/patterns/text-toolbar-pattern/index.mdx
+++ b/src/pages/patterns/text-toolbar-pattern/index.mdx
@@ -34,6 +34,19 @@ contributions.
 
 </AnchorLinks>
 
+## Resources
+
+<Row className="resource-card-group">
+<Column colMd={4} colLg={4} noGutterSm>
+  <ResourceCard
+    subTitle="Text toolbar pattern library"
+    href="sketch://add-library/cloud/f32b7e90-d97e-48ef-ae53-beabf75f5846"
+    actionIcon="download">
+
+  </ResourceCard>
+</Column>
+</Row>
+
 ## Overview
 
 A text toolbar is a set of buttons and menus that is grouped horizontally. These
