Moved into "When not to use"

--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -47,6 +47,11 @@ uploader.
 - Uploading files by dragging and dropping.
 - Showing the process of uploading.
 
+### When not to use
+
+- Do not use upload in a modal when multiple files are uploaded, as uploaded
+  files stack vertically.
+
 ## Live demo
 
 <ComponentDemo
@@ -158,9 +163,6 @@ uploader.
 2. **Description:** Assistive text to help the user make an informed selection.
 3. **Button or drop zone:** The action to select a file to upload.
 4. **Uploaded file:** A file that has successfully been uploaded.
-
-Do not use upload in a modal when multiple files are uploaded, as uploaded files
-stack vertically.
 
 ### Sizing
 
