--- a/src/pages/whats-happening/meetups/index.mdx
+++ b/src/pages/whats-happening/meetups/index.mdx
@@ -46,6 +46,24 @@ work in progress and learn that way.
 </Column>
 </Row>
 
+<Row className="meetups-list">	
+<Column colLg={4} colMd={2}>	
+
+![](/images/events_insiders.png)	
+
+</Column>	
+<Column colLg={7} colMd={5}>	
+
+<h2>	
+  Carbon Insiders	
+  <span>First Thursdays, 9:00am–10:00am Central</span>	
+</h2>	
+
+_For IBMers only:_ A monthly meeting for teams building on top of Carbon to discuss best practices, identify areas of reuse, and bring up things the Carbon team can do to make their jobs easier. This group helps out with Carbon's release cycles to detect breaking changes.
+
+</Column>	
+</Row>
+
 <Row className="meetups-list">
 <Column colLg={4} colMd={2}>
 
