Tweak to file uploader (#1649)
* Tweak to file uploader

* Moved into "When not to use"

Co-authored-by: TJ Egan <tw15egan@gmail.com>

--- a/src/pages/components/file-uploader/usage.mdx
+++ b/src/pages/components/file-uploader/usage.mdx
@@ -47,6 +47,11 @@ uploader.
 - Uploading files by dragging and dropping.
 - Showing the process of uploading.
 
+### When not to use
+
+- Do not use upload in a modal when multiple files are uploaded, as uploaded
+  files stack vertically.
+
 ## Live demo
 
 <ComponentDemo
@@ -181,7 +186,7 @@ the file uploader for consistency.
 
 ### Alignment
 
-Right align the button or drop zone area with the uploaded files. Multiple files
+Left align the button or drop zone area with the uploaded files. Multiple files
 will stack vertically.
 
 <Row>
