--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -130,7 +130,7 @@ design kit, visit the [Design kits](/designing/kits/sketch) page.
 
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Text tooblar pattern library"
+    subTitle="Text toolbar pattern library"
     href="sketch://add-library/cloud/f32b7e90-d97e-48ef-ae53-beabf75f5846"
     actionIcon="download">
     <MdxIcon name="sketch" />
