--- a/src/pages/designing/design-resources/index.mdx
+++ b/src/pages/designing/design-resources/index.mdx
@@ -112,7 +112,7 @@ design kit, visit the [Design kits](/designing/kits/sketch) page.
 
 <Column colLg={4} colMd={4} noGutterSm>
   <ResourceCard
-    subTitle="Carbon mobile sketch kit"
+    subTitle="Carbon mobile Sketch kit"
     href="https://www.sketch.com/s/a3343128-adb6-489c-9e62-709d89ba76e9"
     actionIcon="launch">
     <MdxIcon name="sketch" />
