--- a/src/pages/designing/get-started.mdx
+++ b/src/pages/designing/get-started.mdx
@@ -23,7 +23,7 @@ running.
 
 ### Install your design kit
 
-Our primary design kit is [Sketch](/designing/kits/sketch) and we also
+Our primary design kit is [Sketch](/designing/kits/sketch) and we also have
 [Adobe XD](/designing/kits/adobe-xd) and [Axure](/designing/kits/axure) kits
 available. Head on over to the Design kits section and follow the install
 instructions to get set up.
