docs: dialog pattern typo

--- a/src/pages/patterns/dialog-pattern/index.mdx
+++ b/src/pages/patterns/dialog-pattern/index.mdx
@@ -9,7 +9,7 @@ description:
 <PageDescription>
 
 A dialog is a “conversation” between the system and the user. It is prompted
-when the sytem needs input from the user or to give the user urgent information
+when the system needs input from the user or to give the user urgent information
 concerning their current workflow. There are two types of dialogs, modal and
 non-modal.
 
