--- a/src/pages/developing/react-tutorial/step-4.mdx
+++ b/src/pages/developing/react-tutorial/step-4.mdx
@@ -246,9 +246,9 @@ While we're at the top of `LandingPage.js`, import the icons that we'll need as
 well.
 
 ```javascript path=src/content/LandingPage/LandingPage.js
-import Globe32 from '@carbon/icons-react/lib/globe/32';
-import PersonFavorite32 from '@carbon/icons-react/lib/person--favorite/32';
-import Application32 from '@carbon/icons-react/lib/application/32';
+import { Globe32 } from '@carbon/icons-react';
+import { PersonFavorite32 } from '@carbon/icons-react';
+import { Application32 } from '@carbon/icons-react';
 ```
 
 <InlineNotification>
