docs(react): consolidate icons-react imports

--- a/src/pages/developing/react-tutorial/step-1.mdx
+++ b/src/pages/developing/react-tutorial/step-1.mdx
@@ -346,9 +346,11 @@ the `TutorialHeader.js` file, we need to import each individual icon we will
 use.
 
 ```javascript path=src/components/TutorialHeader/TutorialHeader.js
-import { Notification20 } from '@carbon/icons-react';
-import { UserAvatar20 } from '@carbon/icons-react';
-import { Switcher20 } from '@carbon/icons-react';
+import {
+  AppSwitcher20,
+  Notification20,
+  UserAvatar20,
+} from '@carbon/icons-react';
 ```
 
 Then we need to add the `HeaderGlobalAction` component inside of the
