docs: curly quote fix

--- a/src/pages/index.mdx
+++ b/src/pages/index.mdx
@@ -112,7 +112,7 @@ building websites and user interfaces.
 
 <ArticleCard
     color="dark"
-    title="Carbon's new information architecture"
+    title="Carbon’s new information architecture"
     author="Jan Child"
     date="August 31, 2020"
     href="https://medium.com/carbondesign/carbons-new-information-architecture-531c52207205"
