--- a/src/pages/whats-happening/news-and-articles/index.mdx
+++ b/src/pages/whats-happening/news-and-articles/index.mdx
@@ -23,7 +23,7 @@ about design systems.
 <Column colLg={4} colMd={4} noGutterMdLeft>
 
 <ArticleCard
-    title="Carbon's new information architecture"
+    title="Carbon’s new information architecture"
     author="Jan Child"
     date="August 31, 2020"
     href="https://medium.com/carbondesign/carbons-new-information-architecture-531c52207205"
