docs: remove first person from page names

--- a/src/pages/all-about-carbon/how-carbon-works.mdx
+++ b/src/pages/all-about-carbon/how-carbon-works.mdx
@@ -1,5 +1,5 @@
 ---
-title: How we work
+title: How Carbon works
 description:
   The Carbon team encourages adoption through guidance and training, community
   development, maintenance, and support.
