docs: nav tweaks

--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -1,5 +1,5 @@
 ---
-title: Who we are
+title: The team
 description:
   Carbon is not just one team. To sustain productive contribution and maintain a
   clear direction for Carbon as a whole, various groups works together to
