--- a/src/pages/all-about-carbon/the-team.mdx
+++ b/src/pages/all-about-carbon/the-team.mdx
@@ -65,7 +65,17 @@ The key responsibilities of the committee are as follows:
 
 ### Members
 
-to be confirmed
+| Member               | Title                                                       |
+| -------------------- | ----------------------------------------------------------- |
+| Sophia Levens, Chair | Executive Director of Design, IBM Sterling, AI Applications |
+| Robin Cannon         | Program Manager, Carbon Design System                       |
+| Mike Abbink          | Distinguished Designer, Carbon Design System                |
+| Dawn Ahukanna        | Design Principal and Front-end Architect, Cloud & Cognitive |
+| Haidy Francis        | Design Director, Security                                   |
+| David Levinson       | Visual Design Lead, Cloud Data & AI                         |
+| Tessa Rhodes         | Senior Design Manager, Cloud Platform                       |
+| Jeannie Servaas      | Creative Lead, Carbon Design System                         |
+| Wonil Suh            | Design Lead, Digital Design System                          |
 
 ## Working groups
 
@@ -127,4 +137,14 @@ from the Carbon Design System.
 
 ### Members
 
-to be confirmed
+| Member             | Business unit         |
+| ------------------ | --------------------- |
+| Phil Gilbert       | Design Program Office |
+| Arin Bhowmick      | Cloud Data & AI       |
+| Sarah Brooks       | Design Program Office |
+| Missy Foristall    | DGC                   |
+| Craig Moser        | AI Apps               |
+| Nigel Prentice     | DGC                   |
+| Shani Sandy        | Systems               |
+| Billy Seabrook     | GBS, iX               |
+| Kristin Wisniewski | CIO                   |
