--- a/src/pages/community/domain-guidance.mdx
+++ b/src/pages/community/domain-guidance.mdx
@@ -1,14 +1,12 @@
 ---
 title: Domain guidance
 description:
-  These sites include guidance and resources for IBM product teams. They are
-  currently accessible to IBMers only.
+  These sites include guidance and resources for IBM product teams. Some of the guidance is accessible to IBMers only.
 ---
 
 <PageDescription>
 
-These sites include guidance and resources for IBM product teams, and are
-currently accessible to IBMers only.
+These sites include guidance and resources for IBM product teams. Some of the guidance is accessible to IBMers only.
 
 </PageDescription>
 
