docs(react): update tutorial to not reference lib (#1705)
* docs(react): update tutorial to not reference lib

* docs(react): consolidate icons-react imports

Co-authored-by: TJ Egan <tw15egan@gmail.com>
Co-authored-by: kodiakhq[bot] <49736102+kodiakhq[bot]@users.noreply.github.com>

--- a/src/pages/developing/react-tutorial/step-4.mdx
+++ b/src/pages/developing/react-tutorial/step-4.mdx
@@ -246,9 +246,7 @@ While we're at the top of `LandingPage.js`, import the icons that we'll need as
 well.
 
 ```javascript path=src/content/LandingPage/LandingPage.js
-import Globe32 from '@carbon/icons-react/lib/globe/32';
-import PersonFavorite32 from '@carbon/icons-react/lib/person--favorite/32';
-import Application32 from '@carbon/icons-react/lib/application/32';
+import { Application32, Globe32, PersonFavorite32 } from '@carbon/icons-react';
 ```
 
 <InlineNotification>
