--- a/src/pages/guidelines/2x-grid/implementation.mdx
+++ b/src/pages/guidelines/2x-grid/implementation.mdx
@@ -715,6 +715,12 @@ components bleed 16px into the gutter on either side of the column. This grid
 mode is most often used in conjunction with another grid mode and arguably
 requires the most design skill to incorporate into layouts.
 
+In order to emphasize the gutters, 1px borders that are darker than the
+background color (in both light and dark themes), must be added to any tiles or
+cards. The borders add just enough clarity to the gutters to stand out, while
+still registering to the user as the background color. The token for these
+borders is `$ui-03`.
+
 Rows that are adjacent will have a 1px of margin between them to match gutter.
 Use vertical helpers here.
 
