--- a/src/pages/community/chart-index.mdx
+++ b/src/pages/community/chart-index.mdx
@@ -1,20 +1,20 @@
 ---
-title: Component index
+title: Charts index
 description:
-  These components are developed and maintained by members of the IBM Carbon
-  community and are currently only accessible to IBMers. They may change over
-  time, and they may be incomplete or experimental. For support, please contact
-  the contributors listed on each page.
+  These charts are developed and maintained by members of the IBM Carbon
+  community. Some may only be accessible to IBMers. They may change over time,
+  and they may be incomplete or experimental. For support, please contact the
+  contributors listed on each page.
 ---
 
 import ChartIndexPage from '../../components/ChartIndexPage';
 
 <PageDescription>
 
-These components are developed and maintained by members of the IBM Carbon
-community and are currently only accessible to IBMers. They may change over
-time, and they may be incomplete or experimental. For support, please contact
-the contributors listed on each page.
+These charts are developed and maintained by members of the IBM Carbon
+community. Some may only be accessible to IBMers. They may change over time, and
+they may be incomplete or experimental. For support, please contact the
+contributors listed on each page.
 
 </PageDescription>
 
