Update Carbon Native Mobile links (no fathom, please add)

--- a/src/pages/whats-happening/work-in-progress/index.mdx
+++ b/src/pages/whats-happening/work-in-progress/index.mdx
@@ -36,12 +36,21 @@ provide feedback and have a say in Carbon's direction.
 <CardGroup>
   <MiniCard
     onClick={() => fathom('trackGoal', 'GC8C8OMU', 0)}
-    title="Carbon mobile sketch kit"
-    href="https://www.sketch.com/s/a3343128-adb6-489c-9e62-709d89ba76e9"
+    title="Carbon Native Mobile (Light theme)"
+    href="sketch://add-library/cloud/a3343128-adb6-489c-9e62-709d89ba76e9"
+    actionIcon="launch"
+  />
+  <MiniCard
+    title="Carbon Native Mobile (Dark theme)"
+    href="sketch://add-library/cloud/1f59f590-6915-47b0-bf06-6fd66209b3b3"
+    actionIcon="launch"
+  />
+  <MiniCard
+    title="IBM Grid template (Native Mobile)"
+    href="https://www.sketch.com/s/42e694ee-4b37-41c9-8c8f-480e2415d9de"
     actionIcon="launch"
   />
 </CardGroup>
-
 ### Components and patterns
 
 <CardGroup>
