--- a/src/pages/all-about-carbon/team.mdx
+++ b/src/pages/all-about-carbon/team.mdx
@@ -7,6 +7,11 @@ description:
 
 <Row>
 
+<Profile name="Mike Abbink" title="IBM Distingished Designer" serial="">
+
+![Mike Abbink headshot](/images/team/abbink_mike.png)
+
+</Profile>
 <Profile name="Robin Cannon" title="Program Manager" serial="5G0753897">
 
 ![Robin Cannon headshot](/images/team/cannon_robin.png)
