feat: remove link from profile component

--- a/src/pages/all-about-carbon/team.mdx
+++ b/src/pages/all-about-carbon/team.mdx
@@ -7,12 +7,12 @@ description:
 
 <Row>
 
-<Profile name="Mike Abbink" title="IBM Distingished Designer" serial="">
+<Profile name="Mike Abbink" title="IBM Distingished Designer">
 
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
 
 </Profile>
-<Profile name="Robin Cannon" title="Program Manager" serial="5G0753897">
+<Profile name="Robin Cannon" title="Program Manager">
 
 ![Robin Cannon headshot](/images/team/cannon_robin.png)
 
