with tabbed nav concept

--- a/src/pages/community/component-index.mdx
+++ b/src/pages/community/component-index.mdx
@@ -5,6 +5,8 @@ description:
   community and are currently only accessible to IBMers. They may change over
   time, and they may be incomplete or experimental. For support, please contact
   the contributors listed on each page.
+
+tabs: ['Component index', 'How to contribute']
 ---
 
 import ComponentIndexPage from '../../components/ComponentIndexPage';
