--- a/src/pages/community/how-to-contribute.mdx
+++ b/src/pages/community/how-to-contribute.mdx
@@ -4,6 +4,8 @@ description:
   We want anyone to be able to add assets to the community component index.
   Maintainers can submit a short pull request in GitHub to add components to the
   index.
+
+tabs: ['Component index', 'How to contribute']
 ---
 
 <PageDescription>
