--- a/src/pages/all-about-carbon/team.mdx
+++ b/src/pages/all-about-carbon/team.mdx
@@ -12,10 +12,109 @@ description:
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
 
 </Profile>
+<Profile name="John Bister" title="Animator">
+
+![John Bister headshot](/images/team/bister_john.png)
+
+</Profile>
+<Profile name="Josh Black" title="Software engineer">
+
+![Josh Black headshot](/images/team/black_josh.png)
+
+</Profile>
+<Profile name="Matt Brothers" title="Front-end developer">
+
+![Matt Brothers headshot](/images/team/brothers_matt.png)
+
+</Profile>
 <Profile name="Robin Cannon" title="Program Manager">
 
 ![Robin Cannon headshot](/images/team/cannon_robin.png)
 
 </Profile>
+<Profile name="Andrea Cardona" title="">
 
+![Andrea Cardona headshot](/images/team/cardona_andrea.png)
+
+</Profile>
+<Profile name="Jan Child" title="Content design lead">
+
+![Jan Child headshot](/images/team/child_jan.png)
+
+</Profile>
+<Profile name="Alessandra Davila" title="Front-end developer">
+
+![Alessandra Davila headshot](/images/team/davila_ale.png)
+
+</Profile>
+<Profile name="TJ Egan" title="Front-end developer">
+
+![TJ Egan headshot](/images/team/egan_tj.png)
+
+</Profile>
+<Profile name="Anna Gonzales" title="Senior designer">
+
+![Anna Gonzales headshot](/images/team/gonzales_anna.png)
+
+</Profile>
+<Profile name="Ricardo Henriquez" title="Front-end developer">
+
+![Ricardo Henriquez headshot](/images/team/henriquez_ricardo.png)
+
+</Profile>
+<Profile name="Jillian Howarth" title="UX Designer">
+
+![Jillian Howarth headshot](/images/team/howarth_jillian.png)
+
+</Profile>
+<Profile name="Alison Joseph" title="Development manager">
+
+![Alison Joseph headshot](/images/team/joseph_alison.png)
+
+</Profile>
+<Profile name="DA Kahn" title="Front-end developer">
+
+![DA Kahn headshot](/images/team/kahn_da.png)
+
+</Profile>
+<Profile name="Josefina Mancilla"  title="Front-end developer">
+
+![Josefina Mancilla headshot](/images/team/mancilla_josefina.png)
+
+</Profile>
+<Profile name="Rafa Nogueras" title="Full-stack developer">
+
+![Rafa Nogueras headshot](/images/team/nogueras_rafa.png)
+
+</Profile>
+<Profile name="Vince Picone" title="Front-end developer">
+
+![Vince Picone headshot](/images/team/picone_vince.png)
+
+</Profile>
+<Profile name="Lauren Rice" title="Senior designer">
+
+![Lauren Rice headshot](/images/team/rice_lauren.png)
+
+</Profile>
+<Profile name="Matt Rosno" title="Offering manager">
+
+![Matt Rosno headshot](/images/team/rosno_matt.png)
+
+</Profile>
+<Profile name="Jeannie Servaas" title="IBM Design Principle">
+
+![eannie Servaas headshot](/images/team/servaas_jean.png)
+
+</Profile>
+<Profile name="Scott Strubberg" title="Front-end developer">
+
+![Scott Strubberg headshot](/images/team/strubberg_scott.png)
+
+</Profile>
+<Profile name="Andrew Wang" title="Front-end developer">
+
+![Andrew Wang headshot](/images/team/wang_andrew.png)
+
+</Profile>
 </Row>
