update team titles to be more consistent

--- a/src/pages/all-about-carbon/team.mdx
+++ b/src/pages/all-about-carbon/team.mdx
@@ -12,17 +12,17 @@ description:
 ![Mike Abbink headshot](/images/team/abbink_mike.png)
 
 </Profile>
-<Profile name="John Bister" title="Animator">
+<Profile name="John Bister" title="Software designer">
 
 ![John Bister headshot](/images/team/bister_john.png)
 
 </Profile>
-<Profile name="Josh Black" title="Software engineer">
+<Profile name="Josh Black" title="Software developer">
 
 ![Josh Black headshot](/images/team/black_josh.png)
 
 </Profile>
-<Profile name="Matt Brothers" title="Front-end developer">
+<Profile name="Matt Brothers" title="Software developer">
 
 ![Matt Brothers headshot](/images/team/brothers_matt.png)
 
@@ -32,67 +32,67 @@ description:
 ![Robin Cannon headshot](/images/team/cannon_robin.png)
 
 </Profile>
-<Profile name="Andrea Cardona" title="">
+<Profile name="Andrea Cardona" title="Software developer">
 
 ![Andrea Cardona headshot](/images/team/cardona_andrea.png)
 
 </Profile>
-<Profile name="Jan Child" title="Content design lead">
+<Profile name="Jan Child" title="Content designer">
 
 ![Jan Child headshot](/images/team/child_jan.png)
 
 </Profile>
-<Profile name="Alessandra Davila" title="Front-end developer">
+<Profile name="Alessandra Davila" title="Software developer">
 
 ![Alessandra Davila headshot](/images/team/davila_ale.png)
 
 </Profile>
-<Profile name="TJ Egan" title="Front-end developer">
+<Profile name="TJ Egan" title="Software developer">
 
 ![TJ Egan headshot](/images/team/egan_tj.png)
 
 </Profile>
-<Profile name="Anna Gonzales" title="Senior designer">
+<Profile name="Anna Gonzales" title="Software designer">
 
 ![Anna Gonzales headshot](/images/team/gonzales_anna.png)
 
 </Profile>
-<Profile name="Ricardo Henriquez" title="Front-end developer">
+<Profile name="Ricardo Henriquez" title="Software developer">
 
 ![Ricardo Henriquez headshot](/images/team/henriquez_ricardo.png)
 
 </Profile>
-<Profile name="Jillian Howarth" title="UX Designer">
+<Profile name="Jillian Howarth" title="Software designer">
 
 ![Jillian Howarth headshot](/images/team/howarth_jillian.png)
 
 </Profile>
-<Profile name="Alison Joseph" title="Development manager">
+<Profile name="Alison Joseph" title="Software development manager">
 
 ![Alison Joseph headshot](/images/team/joseph_alison.png)
 
 </Profile>
-<Profile name="DA Kahn" title="Front-end developer">
+<Profile name="DA Kahn" title="Software developer">
 
 ![DA Kahn headshot](/images/team/kahn_da.png)
 
 </Profile>
-<Profile name="Josefina Mancilla"  title="Front-end developer">
+<Profile name="Josefina Mancilla"  title="Software developer">
 
 ![Josefina Mancilla headshot](/images/team/mancilla_josefina.png)
 
 </Profile>
-<Profile name="Rafa Nogueras" title="Full-stack developer">
+<Profile name="Rafa Nogueras" title="Software developer">
 
 ![Rafa Nogueras headshot](/images/team/nogueras_rafa.png)
 
 </Profile>
-<Profile name="Vince Picone" title="Front-end developer">
+<Profile name="Vince Picone" title="Software developer">
 
 ![Vince Picone headshot](/images/team/picone_vince.png)
 
 </Profile>
-<Profile name="Lauren Rice" title="Senior designer">
+<Profile name="Lauren Rice" title="Software designer">
 
 ![Lauren Rice headshot](/images/team/rice_lauren.png)
 
@@ -107,12 +107,12 @@ description:
 ![eannie Servaas headshot](/images/team/servaas_jean.png)
 
 </Profile>
-<Profile name="Scott Strubberg" title="Front-end developer">
+<Profile name="Scott Strubberg" title="Software developer">
 
 ![Scott Strubberg headshot](/images/team/strubberg_scott.png)
 
 </Profile>
-<Profile name="Andrew Wang" title="Front-end developer">
+<Profile name="Andrew Wang" title="Software developer">
 
 ![Andrew Wang headshot](/images/team/wang_andrew.png)
 
