fix: pagination error in vue tutorial

--- a/src/pages/developing/vue-tutorial/step-3.mdx
+++ b/src/pages/developing/vue-tutorial/step-3.mdx
@@ -614,7 +614,7 @@ method to handle the pagination event.
   methods: {
     onPagination(val) {
       this.pageSize = val.length;
-      this.pageStart = val.start;
+      this.pageStart = Math.max(0, val.start - 1); // page numbers start at 1 - use max value as a precaution.
       this.page = val.page;
     }
   }
