--- a/src/pages/all-about-carbon/team.mdx
+++ b/src/pages/all-about-carbon/team.mdx
@@ -5,6 +5,9 @@ description:
 
 ## The Carbon team
 
+Carbon is maintained by a dedicated team of designers, developers and writers
+based in the Austin, Texas IBM Design studio.
+
 <Row>
 
 <Profile name="Mike Abbink" title="IBM Distingished Designer">
