--- a/src/pages/community/how-to-contribute.mdx
+++ b/src/pages/community/how-to-contribute.mdx
@@ -1,18 +1,16 @@
 ---
 title: Contributing a component
 description:
-  We want anyone to be able to add assets to the community component index.
-  Maintainers can submit a short pull request in GitHub to add components to the
-  index.
+  Anyone can add assets to the community component index. Maintainers can submit
+  a short pull request in GitHub to add components to the index.
 
 tabs: ['Component index', 'How to contribute']
 ---
 
 <PageDescription>
 
-We want anyone to be able to add assets to the community component index.
-Maintainers can submit a short pull request in GitHub to add components to the
-index.
+Anyone can add assets to the community component index. Maintainers can submit a
+short pull request in GitHub to add components to the index.
 
 </PageDescription>
 
@@ -20,13 +18,14 @@ index.
 
 1. In the
    [index folder](https://github.com/carbon-design-system/carbon-website/tree/master/src/data/index)
-   of the carbon-website GitHub repo, open your team folder (or create one if
-   your team doesn’t have on yet).
-2. On the next page, in the top right above the the table click `Add file` then
-   `Create new file`.
-3. Name your file `component-name.yml`.
-4. Copy and paste this template into the “Edit new file” section of the page and
-   fill out the correct information for your component.
+   of the carbon-website GitHub repo, open your team folder. Create a folder if
+   your team doesn’t have one yet).
+2. On the next page, click `Add file` (top right) then `Create new file`.
+3. Name your file `component-name.yml`, where _component-name_ is the name of
+   your component.
+4. Copy and paste the following template into the `Edit new file` section of the
+   page and fill out the correct information for your component.
+
    ```
    name: component name
    website_url: >-
@@ -43,17 +42,21 @@ index.
      - fuzzy term for component (e.g. an alias for a "card" component might be "tile")
    date_added: YYY-MM-DDT00:00:00.000Z
    ```
-5. Once done, click the green `Create new file` button at the bottom.
-6. After submitting the PR for the data, you’ll need to upload your image. Go
-   back to your team folder in the
-   [index folder](https://github.com/carbon-design-system/carbon-website/tree/master/src/data/index).
-7. Inside your team folder click on the `images` folder.
-8. In the top right, click `Add file` then `Upload files` then upload your image
-   to that page then submit the PR by clicking the green `Commit changes` button
-   at the bottom. Note: name you image file with the same name as the component
-   (e.g. `component-name.png` to match `component-name.yml`).
-9. And you’re done! The Carbon team will review and merge the PR.
 
-If you’re unsure about how to make a PR through GitHub then create an issue in
-the repo instead and we’ll help you out. Be sure to include all the necessary
+5. Once done, click the green `Commit new file` button at the bottom.
+
+After submitting the PR for the data, you should upload a thumbnail image. Go
+back to your team folder in the
+[index](https://github.com/carbon-design-system/carbon-website/tree/master/src/data/index).
+
+1. Inside your team folder click the `images` folder.
+2. In the top right, click `Add file` then `Upload files` to upload your image
+   to that page then submit the PR. Note: name your image file with the same
+   name as the component (e.g. `component-name.png` to match
+   `component-name.yml`).
+
+And you’re done! The Carbon team will review and merge the PR.
+
+If you’re unsure about how to make a PR through GitHub, create an issue in the
+repo instead and we’ll help you out. Be sure to include all the necessary
 component information and images.
